# VINS-Mono_Ext

./: README.md
changed_files_vins_mono/: Camera.cc  PinholeCamera.cc  PinholeCamera.h
config/: cam_rantan.yaml  robocane_config.yaml  robocane_config_320.yaml  tum_config.yaml  tum_vio_config.yaml
config/euroc/: ex_calib_result.yaml  vins_result.csv
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/freak/: CMakeLists.txt  freak.cpp  freak.h  freak_demo.cpp
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  feature_tracker_node_bag.cpp  freak_node.cpp  freak_tracker.cpp  freak_tracker.h  frontend.cpp  frontend.h  keyframe.cpp  keyframe.h  kf_node.cpp  kf_tracker.cpp  kf_tracker.h  parameters.cpp  parameters.h  test_cam_model.cpp  test_cam_model_2.cpp  test_cam_model_lm.cpp
launch/: .robocane_data.launch.swp  feature_track.launch  freak_track.launch  kf_track.launch  mapping.launch  robocane_data.launch  robocane_data_320.launch  tmp.launch  vins_feature_ext.launch  vins_freak.launch  vins_local_kf.launch  vins_local_kf_bag.launch  vins_rviz_config.rviz  vins_rviz_ext_compare.launch
launch/run_tum_vio/: run_estimator.launch  run_feature_tracker.launch  run_together.launch  run_together_no_view.launch  run_vins-mono_ext.sh  test.launch  vins_feature_ext.launch
matlab_tools/distortion_model/: Equi2Pin.m  Equi2Pin4.m  Undistort.m  distortEquidist.m  test.m
matlab_tools/libs_dir/gtsam-toolbox-2.3.0-win64/toolbox/: gtsam_wrapper.mexw64
matlab_tools/libs_dir/gtsam-toolbox-2.3.0-win64/toolbox/+gtsam/: BearingFactor2D.m  BearingRangeFactor2D.m  BetweenFactorLieMatrix.m  BetweenFactorLieScalar.m  BetweenFactorLieVector.m  BetweenFactorPoint2.m  BetweenFactorPoint3.m  BetweenFactorPose2.m  BetweenFactorPose3.m  BetweenFactorRot2.m  BetweenFactorRot3.m  Cal3DS2.m  (+144 more)
matlab_tools/result_comp/: analyze_data.m  result.docx
matlab_tools/result_comp/VINS-Mono/ETAS_2F_640_30/: run_1.csv  run_10.csv  run_3.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv
matlab_tools/result_comp/VINS-Mono/ETAS_4F_640_30/: run_10.csv  run_3.csv  run_4.csv  run_5.csv  run_7.csv  run_9.csv
matlab_tools/result_comp/VINS-Mono/ETAS_F2_640_30/: run_1.csv  run_10.csv  run_3.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_9.csv
matlab_tools/result_comp/VINS-Mono/ETAS_F4_640_30/: run_1.csv  run_10.csv  run_2.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_9.csv
matlab_tools/result_comp/VINS-Mono_ext/ETAS_2F_640_30/: run_1.csv  run_2.csv  run_3.csv  run_4.csv  run_9.csv
matlab_tools/result_comp/VINS-Mono_ext/ETAS_4F_640_30/: run_10.csv  run_4.csv  run_5.csv  run_7.csv  run_8.csv  run_9.csv
matlab_tools/result_comp/VINS-Mono_ext/ETAS_F2_640_30/: run_1.csv  run_10.csv  run_2.csv  run_3.csv  run_4.csv  run_6.csv  run_7.csv  run_8.csv  run_9.csv
matlab_tools/result_comp/VINS-Mono_ext/ETAS_F4_640_30/: run_1.csv  run_10.csv  run_3.csv  run_5.csv  run_6.csv  run_9.csv
matlab_tools/simulation/: SFM.asv  SFM.m  VisualiSAM.dot  add_path.m  computeMeanSigma.asv  computeMeanSigma.m  computeRMSE.asv  computeRMSE.m  computeRMSEArray.asv  computeRMSEArray.m  createFeatureHorizontal.m  createObservations.asv  createObservations.m  createObservations_VINS.asv  createObservations_VINS.m  createTrajectory.asv  createTrajectory.m  default_option.m  error_bar.fig  extractTrajectory.asv  extractTrajectory.m  get_rs_r200.m  in_cam_view.m  main_swing_simulation.asv  main_swing_simulation.m  main_swing_simulation_statistics.asv  main_swing_simulation_statistics.m  mu_sigma.mat  mu_sigma_1.mat  mu_sigma_large_noise.mat  mu_sigma_no_noise.mat  newFactors.ps  param_global.asv  param_global.m  plotRMSE.asv  plotRMSE.m  plot_result_statistics.asv  plot_result_statistics.m  plot_trajectory_and_gt.m  pose2pt.m  (+22 more)
result_comp/: analyze_data.m
result_comp/VINS-Mono/ETAS_2F_640_30/: run_2.csv  run_9.csv
result_comp/VINS-Mono/ETAS_4F_640_30/: run_1.csv  run_2.csv  run_6.csv  run_8.csv
result_comp/VINS-Mono/ETAS_F2_640_30/: run_2.csv  run_8.csv
result_comp/VINS-Mono/ETAS_F4_640_30/: run_3.csv  run_8.csv
result_comp/VINS-Mono_ext/ETAS_2F_640_30/: run_10.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv
result_comp/VINS-Mono_ext/ETAS_4F_640_30/: run_1.csv  run_2.csv  run_3.csv  run_6.csv
result_comp/VINS-Mono_ext/ETAS_F2_640_30/: run_5.csv
result_comp/VINS-Mono_ext/ETAS_F4_640_30/: run_2.csv  run_4.csv  run_7.csv  run_8.csv
sync_time/: CMakeLists.txt  package.xml
sync_time/src/: bundle_adjust.cpp  bundle_adjust.h  estimator_wrapper.cpp  estimator_wrapper.h  feature_manager.cpp  feature_manager.h  imu_structure.cpp  imu_structure.h  main_sync_time.cpp  main_sync_time2.cpp  read_file.cpp  rotation_error.cpp  rotation_error.h  shift_imu.cpp  shift_imu.h  shift_imu2.cpp  shift_imu2.h  track_feature.cpp  track_feature.h  vision_sfm.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: .tum_vio.launch.swp  tum_vio.launch
vins_estimator/src/: check_project_factor.cpp  estimator.cpp  estimator.cpp_back2  estimator.cpp_before  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.cpp_back  feature_manager.cpp_back2  feature_manager.cpp_before  feature_manager.h  feature_manager.h_back  feature_manager.h_back2  feature_manager.h_before  parameters.cpp
vins_estimator/src/factor/: imu_factor.h  plot_w.ipynb  projection_factor.cpp  weight_projection_factor.cpp  weight_projection_factor.h
vins_estimator/src/factor/.ipynb_checkpoints/: plot_w-checkpoint.ipynb
vins_estimator/src/initial/: initial_alignment.h
vins_estimator/src/utility/: visualization.cpp
vins_estimator_back/: .CMakeLists.txt.swp  package.xml_back
vins_estimator_back/src/: estimator.cpp  estimator.cpp_back2  estimator.h  estimator.h_back2  estimator_node.cpp  feature_manager.cpp  feature_manager.cpp_back2  feature_manager.h  parameters.cpp  parameters.h
vins_estimator_back/src/factor/: imu_factor.h  projection_factor.cpp  weight_projection_factor.cpp
vins_estimator_back/src/initial/: initial_sfm.cpp
vins_estimator_back/src/utility/: visualization.cpp
(+22 files in other folders)
